--- a/examples/app-dir/package.json
+++ b/examples/app-dir/package.json
@@ -10,7 +10,7 @@
     "next": "13.3.2-canary.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@imbios/next-pwa": "latest"
+    "@imbios/next-pwa": "../../packages/next-pwa"
   },
   "devDependencies": {
     "@types/node": "18.16.3",
