--- a/examples/cookie/package.json
+++ b/examples/cookie/package.json
@@ -2,7 +2,7 @@
   "name": "example-cookie",
   "version": "1.0.0",
   "dependencies": {
-    "@imbios/next-pwa": "latest",
+    "@imbios/next-pwa": "../../packages/next-pwa",
     "js-cookie": "3.0.1",
     "next": "13.3.2-canary.7",
     "next-cookies": "2.0.3",
