--- a/examples/custom-ts-worker/package.json
+++ b/examples/custom-ts-worker/package.json
@@ -2,7 +2,7 @@
   "name": "example-custom-ts-worker",
   "version": "1.0.0",
   "dependencies": {
-    "@imbios/next-pwa": "latest",
+    "@imbios/next-pwa": "../../packages/next-pwa",
     "babel-loader": "8.2.5",
     "next": "13.3.2-canary.7",
     "react": "18.2.0",
