--- a/examples/offline-fallback/package.json
+++ b/examples/offline-fallback/package.json
@@ -2,7 +2,7 @@
   "name": "example-offline-fallback",
   "version": "1.0.0",
   "dependencies": {
-    "@imbios/next-pwa": "latest",
+    "@imbios/next-pwa": "../../packages/next-pwa",
     "next": "13.3.2-canary.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
