--- a/packages/next-pwa/package.json
+++ b/packages/next-pwa/package.json
@@ -3,6 +3,16 @@
   "description": "Next.js with PWA, powered by workbox.",
   "version": "1.1.1",
   "author": "Imamuzzaki Abu Salam <imamuzzaki@gmail.com>",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "dependencies": {
     "babel-loader": "8.3.0",
     "clean-webpack-plugin": "4.0.0",
@@ -12,6 +22,8 @@
     "workbox-window": "6.6.1"
   },
   "devDependencies": {
+    "tsup": "^6.7.0",
+    "typescript": "4.9.5",
     "webpack": "5.86.0"
   },
   "keywords": [
@@ -21,12 +33,31 @@
     "web",
     "workbox"
   ],
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch"
+  },
+  "tsup": {
+    "entry": [
+      "src/index.js",
+      "src/register.js"
+    ],
+    "external": [
+      "pnpapi",
+      "watchpack"
+    ],
+    "splitting": true,
+    "sourcemap": true,
+    "clean": true,
+    "minify": true,
+    "format": [
+      "cjs",
+      "esm"
+    ],
+    "dts": false
+  },
   "license": "MIT",
-  "main": "index.js",
   "peerDependencies": {
     "next": ">=9.0.0"
-  },
-  "resolutions": {
-    "@typescript-eslint/eslint-plugin": "5.59.9"
   }
 }
